2011-11-16  Tony Chang  <tony@chromium.org>

        [NRWT] refactor drivers to require pixel_tests param
        https://bugs.webkit.org/show_bug.cgi?id=72517

        Reviewed by Ojan Vafai.

        No tests, just a refactoring.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-11-16  Dirk Pranke  <dpranke@chromium.org>

        Run a dummy test in the gpu configurations if there's nothing to do.
        https://bugs.webkit.org/show_bug.cgi?id=72498

        Reviewed by James Robinson.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:

2011-11-16  Chris Fleizach  <cfleizach@apple.com>

        WebKitTestRunner needs to support accessibility-related DRT APIs
        https://bugs.webkit.org/show_bug.cgi?id=42131

        Reviewed by Beth Dakin.

        Port the AX code in DRT to WKTestRunner by using IDL.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (horizontalScrollbarCallback):
        (verticalScrollbarCallback):
        (AccessibilityUIElement::horizontalScrollbar):
        (AccessibilityUIElement::verticalScrollbar):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::horizontalScrollbar):
        (AccessibilityUIElement::verticalScrollbar):
        * WebKitTestRunner/DerivedSources.make:
        * WebKitTestRunner/GNUmakefile.am:
        * WebKitTestRunner/InjectedBundle/AccessibilityController.cpp: Added.
        (WTR::AccessibilityController::create):
        (WTR::AccessibilityController::AccessibilityController):
        (WTR::AccessibilityController::~AccessibilityController):
        (WTR::AccessibilityController::makeWindowObject):
        (WTR::AccessibilityController::wrapperClass):