@@ -1,3 +1,13 @@
+2011-11-16  David Levin  <levin@chromium.org>
+
+        check-webkit-style should recognize functions even if they have OVERRIDE after them.
+        https://bugs.webkit.org/show_bug.cgi?id=72515
+
+        Reviewed by Adam Barth.
+
+        * Scripts/webkitpy/style/checkers/cpp.py:
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
+
 2011-11-16  Tony Chang  <tony@chromium.org>
 
         [NRWT] refactor drivers to require pixel_tests param
